--- a/react-complete-guide/src/Person/Person.css
+++ b/react-complete-guide/src/Person/Person.css
@@ -1,4 +1,4 @@
-.Person {
+/* .Person {
   width: 60%;
   margin: auto ;
   border: 1px solid #eeeeee;
@@ -9,8 +9,8 @@
   font-size: 20px;
   color: aliceblue;
   background-color: blue;
-}
-.input-text {
+} */
+/* .input-text {
   padding: 8px;
   outline-color: aquamarine;
-}
+} */
